Fix back and next button being covered by background in staff profile setup

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -769,7 +769,7 @@ select::-ms-expand {
   margin-top: 50px;
   margin: auto;
   width: 63em;
-  padding: 1em;
+  padding: 1em 1em 3em 1em;
   margin-bottom: 50px;
 }
 
@@ -788,7 +788,7 @@ select::-ms-expand {
   margin-top: 50px;
   margin: auto;
   width: 83em;
-  padding: 1em;
+  padding: 1em 1em 3em 1em;
   margin-bottom: 50px;
 }
 
@@ -810,7 +810,7 @@ select::-ms-expand {
   margin-left: auto;
   margin-right: auto;
   width: 86.5em;
-  padding: 1em;
+  padding: 1em 1em 3em 1em;
   margin-bottom: 50px;
 }
 
